Fixed flip flicker by removing background-colour

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -259,7 +259,6 @@ i.fa.fa-facebook {
 	vertical-align: top;
 	outline: 0;
 	border-radius: 4px;
-	-webkit-box-shadow: inset 0px 2px 14px -7px rgba(0, 0, 0, 1);
 }
 
 #ingredient-search {
@@ -280,29 +279,32 @@ i.fa.fa-facebook {
 .recipe-thumb {
 	width: 600px;
 	height: 400px;
-	margin-left: auto;
-	margin-right: auto;
+	-webkit-perspective: 1000px;
 	perspective: 1000px;
 }
 
 .inner.flipped {
+	transform: rotatey(-180deg);
 	-webkit-transform: rotatey(-180deg);
 }
 
 .inner {
 	height: 100%;
 	width: 100%;
-	-webkit-transform-style: preserve-3d;
-	-webkit-transition: 0.5s;
-	background-color: $light-grey;
 	border-radius: 5px;
+	transition: 0.5s;
+	-webkit-transition: 0.5s;
+	transform-style: preserve-3d;
+	-webkit-transform-style: preserve-3d;
 }
 
 .face {
-	-webkit-backface-visibility: hidden;
 	z-index: 2;
 	position: absolute;
+	backface-visibility: hidden;
+	-webkit-backface-visibility: hidden;
 }
+
 .front {
 	z-index: 1;
 	position: absolute;
@@ -324,21 +326,26 @@ i.fa.fa-facebook {
 	margin-bottom: 10px;
 }
 
-.recipe-thumb .inner .back {
+.back {
+	transform: rotatey(-180deg);
 	-webkit-transform: rotatey(-180deg);
 }
 
 .recipe-thumb.hover {
 	.inner {
-		transition: .3s; 
+		transition: .3s;
+		-webkit-transition: .3s;
 		transform: rotateY(3deg);
+		-webkit-transform: rotateY(3deg);
 	}
 }
 
 .recipe-thumb.hover2 {
 	.inner {
 		transition: .3s; 
+		-webkit-transition: .3s;
 		transform: rotateY(-3deg);
+		-webkit-transform: rotateY(3deg);
 	}
 }
 
@@ -429,21 +436,6 @@ i.fa.fa-facebook {
 
 .aside h4 span {
 	font-size: 1rem;
-}
-
-.dots {
-	z-index: 3;
-	position: absolute;
-	display: inline-block;
-	padding-right: 15px;
-	bottom: 0;
-	right: 0;
-}
-
-.dots h2 {
-	text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.35);
-	color: white;
-	margin: 0;
 }
 
 // Back of Card
